corrected code style